@@ -74,10 +74,9 @@ void ccDrawLine( CGPoint origin, CGPoint destination );
  */
 void ccDrawPoly( const CGPoint *vertices, NSUInteger numOfVertices, BOOL closePolygon );
 
-/** draws a filled polygon given a pointer to CGPoint coordiantes, the number of vertices measured in points.
- and a color. The polygon is always filled and of uniform color.
+/** draws a filled polygon given a pointer to CGPoint coordiantes, the number of vertices measured in points, and a color.
  */
-void ccDrawFilledPoly( const CGPoint *poli, NSUInteger numberOfPoints, ccColor4F color);    
+void ccDrawFilledPoly( const CGPoint *poli, NSUInteger numberOfPoints, ccColor4B color );
     
 /** draws a circle given the center, radius and number of segments measured in points */
 void ccDrawCircle( CGPoint center, float radius, float angle, NSUInteger segments, BOOL drawLineToCenter);
